--- a/templates/Home/homepage.html
+++ b/templates/Home/homepage.html
@@ -11,7 +11,7 @@
                     <div class="card-header">
                         <h3 class="text-center"> Cauta </h3>
                     </div>
-                    <form class="d-flex" role="search" enctype="multipart/form-data">
+                    <form method="post">
                         {% csrf_token %}
                         <div class="card-body">
                             {{ form.as_p }}
