--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -24,12 +24,12 @@
             </ul>
             {% if user.is_authenticated %}
                 <div>
-                    <a href="#" class="btn btn-danger">Logout</a>
+                    <a href="{% url 'logout' %}" class="btn btn-danger">Logout</a>
                 </div>
             {% else %}
                 <div>
-                    <a href="#" class="btn btn-success">Login</a>
-                    <a href="#" class="btn btn-warning">Sign Up</a>
+                    <a href="{% url 'login' %}" class="btn btn-success">Login</a>
+                    <a href="{% url 'create-user' %}" class="btn btn-warning">Sign Up</a>
                 </div>
             {%  endif %}
         </div>
