--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -16,9 +16,9 @@
                         Categorii
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Comision 0</a></li>
-                        <li><a class="dropdown-item" href="#">Ansamblu rezidential</a></li>
-                        <li><a class="dropdown-item" href="#">Agentii imobiliare</a></li>
+                        <li><a class="dropdown-item" href="{% url 'comision-0' %}">Comision 0</a></li>
+                        <li><a class="dropdown-item" href="{% url 'ansamblu-rezidential' %}">Ansamblu rezidential</a></li>
+                        <li><a class="dropdown-item" href="{% url 'agentii-imobiliare' %}">Agentii imobiliare</a></li>
                     </ul>
                 </li>
             </ul>
