--- a/templates/createPost/comision_0.html
+++ b/templates/createPost/comision_0.html
@@ -1,13 +1,29 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block title %} Comision 0 {% endblock %}
 
 {% block content %}
-	<div class="container-fluid">
+    <div class="container-fluid">
         <div class="row">
-            <div class="col-md-3 offset-md-6">
-
-            </div>
+            {% for anunt in all_announce %}
+                <div class="col-md-3 ">
+                <br>
+                    <div class="card" style="width: 18rem;">
+                        {% if anunt.poze %}
+                        <img src="{{ anunt.poze }}" class="card-img-top" alt="...">
+                        {% else %}
+                        <img src="{% static 'images/no_image_available.png' %}" class="card-img-top" alt="...">
+                        {% endif %}
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                                the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
         </div>
     </div>
 {% endblock %}
