--- a/templates/createPost/comision_0.html
+++ b/templates/createPost/comision_0.html
@@ -16,9 +16,11 @@
                         <img src="{% static 'images/no_image_available.png' %}" class="card-img-top" alt="...">
                         {% endif %}
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                                the card's content.</p>
+                            <h5 class="card-title">{{ anunt.titul_anunt }}</h5>
+                            <p class="card-text">{{ anunt.pret }}</p>
+                            <p class="card-text">{{ anunt.localizare }}</p>
+                            <p class="card-text">{{ anunt.tip_vanzare }}</p>
+                            <p class="card-text">{{ anunt.descriere }}</p>
                             <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
