--- a/templates/createPost/comision_0.html
+++ b/templates/createPost/comision_0.html
@@ -11,7 +11,7 @@
                 <br>
                     <div class="card" style="width: 18rem;">
                         {% if anunt.poze %}
-                        <img src="{{ anunt.poze }}" class="card-img-top" alt="...">
+                        <img src="{{ anunt.poze.url }}" class="card-img-top" alt="...">
                         {% else %}
                         <img src="{% static 'images/no_image_available.png' %}" class="card-img-top" alt="...">
                         {% endif %}
@@ -21,6 +21,7 @@
                             <p class="card-text">{{ anunt.localizare }}</p>
                             <p class="card-text">{{ anunt.tip_vanzare }}</p>
                             <p class="card-text">{{ anunt.descriere }}</p>
+                            <p class="card-text">{{ anunt.tip_anunt }}</p>
                             <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
