--- a/templates/createPost/ansamblu_rezidential.html
+++ b/templates/createPost/ansamblu_rezidential.html
@@ -21,7 +21,7 @@
                             <p class="card-text">{{ anunt.localizare }}</p>
                             <p class="card-text">{{ anunt.tip_vanzare }}</p>
                             <p class="card-text">{{ anunt.descriere }}</p>
-                            <p class="card-text">{{ anunt.tip_anunt }}</p>
+                            <p class="card-text">{{ anunt.tip_vanzare }}</p>
                             <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
