--- a/templates/Home/homepage.html
+++ b/templates/Home/homepage.html
@@ -1,9 +1,10 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block title %} Home {% endblock %}
 
 {% block content %}
-	<div class="container-fluid">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-md-6 offset-md-3">
                 <br><br>
@@ -23,5 +24,30 @@
                 </div>
             </div>
         </div>
-    </div>
+        <br>
+        <div class="row">
+            <div class="col-md-6 offset-md-3">
+                {% for anunt in all_announce %}
+                    <div class="col-md-3 ">
+                        <br><br>
+                        <div class="card" style="width: 18rem;">
+                            {% if anunt.poze %}
+                                <img src="{{ anunt.poze.url }}" class="card-img-top" alt="...">
+                            {% else %}
+                                <img src="{% static 'images/no_image_available.png' %}" class="card-img-top" alt="...">
+                            {% endif %}
+                            <div class="card-body">
+                                <h5 class="card-title">{{ anunt.titul_anunt }}</h5>
+                                <p class="card-text">{{ anunt.pret }}</p>
+                                <p class="card-text">{{ anunt.localizare }}</p>
+                                <p class="card-text">{{ anunt.tip_vanzare }}</p>
+                                <p class="card-text">{{ anunt.descriere }}</p>
+                                <p class="card-text">{{ anunt.tip_vanzare }}</p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
 {% endblock %}
