--- a/templates/Home/homepage.html
+++ b/templates/Home/homepage.html
@@ -26,10 +26,10 @@
         </div>
         <br>
         <div class="row">
-            <div class="col-md-6 offset-md-3">
-                {% for anunt in all_announce %}
+            <div class="col-md-8 offset-md-2">
+                {% for anunt in 4_tl%}
                     <div class="col-md-3 ">
-                        <br><br>
+                        <br>
                         <div class="card" style="width: 18rem;">
                             {% if anunt.poze %}
                                 <img src="{{ anunt.poze.url }}" class="card-img-top" alt="...">
