--- a/templates/sellMethod/rent_AI.html
+++ b/templates/sellMethod/rent_AI.html
@@ -17,6 +17,17 @@
                     <a class="nav-link active" href="{% url 'rent-AI' %}">Inchirieri</a>
                 </li>
             </ul>
+            <ul class="nav nav-tabs">
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'agentii-imobiliare' %}">Apartamente</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="{% url 'sell-AI' %}">Case/Vile</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="{% url 'rent-AI' %}">Terenuri</a>
+                </li>
+            </ul>
             {% if user.is_authenticated %}
                 {% for anunt in all_announce %}
                     <div class="col-md-3 ">
@@ -29,11 +40,11 @@
                             {% endif %}
                             <div class="card-body">
                                 <h5 class="card-title">{{ anunt.titul_anunt }}</h5>
-                                <p class="card-text">{{ anunt.pret }}</p>
-                                <p class="card-text">{{ anunt.localizare }}</p>
-                                <p class="card-text">{{ anunt.tip_vanzare }}</p>
-                                <p class="card-text">{{ anunt.descriere }}</p>
-                                <p class="card-text">{{ anunt.tip_vanzare }}</p>
+                                <p class="card-text">Suprafata utila: {{ anunt.suprafata_utila }} mp</p>
+                                <p class="card-text">Pret: {{ anunt.pret }} euro</p>
+                                <p class="card-text">Localitatea: {{ anunt.localizare }}</p>
+                                <p class="card-text">Descriere: {{ anunt.descriere }}</p>
+                                <p class="card-text">Metoda Achizitie: {{ anunt.tip_vanzare }}</p>
                                 <a href="#" class="btn btn-primary">Go somewhere</a>
                             </div>
                         </div>
