--- a/templates/sellMethod/rent_AR.html
+++ b/templates/sellMethod/rent_AR.html
@@ -29,11 +29,11 @@
                             {% endif %}
                             <div class="card-body">
                                 <h5 class="card-title">{{ anunt.titul_anunt }}</h5>
-                                <p class="card-text">{{ anunt.pret }}</p>
-                                <p class="card-text">{{ anunt.localizare }}</p>
-                                <p class="card-text">{{ anunt.tip_vanzare }}</p>
-                                <p class="card-text">{{ anunt.descriere }}</p>
-                                <p class="card-text">{{ anunt.tip_vanzare }}</p>
+                                <p class="card-text">Suprafata utila: {{ anunt.suprafata_utila }} mp</p>
+                                <p class="card-text">Pret: {{ anunt.pret }} euro</p>
+                                <p class="card-text">Localitatea: {{ anunt.localizare }}</p>
+                                <p class="card-text">Descriere: {{ anunt.descriere }}</p>
+                                <p class="card-text">Metoda Achizitie: {{ anunt.tip_vanzare }}</p>
                                 <a href="#" class="btn btn-primary">Go somewhere</a>
                             </div>
                         </div>
