--- a/templates/sellMethod/rent_AR_case.html
+++ b/templates/sellMethod/rent_AR_case.html
@@ -22,7 +22,7 @@
                     <a class="nav-link" href="{% url 'rent-AR-ap' %}">Apartamente</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="{% url 'rent-AR-case' %}">Case/Vile</a>
+                    <a class="nav-link active" aria-current="page" href="{% url 'rent-AR-case' %}">Case/Vile</a>
                 </li>
             </ul>
             {% if user.is_authenticated %}
