--- a/templates/sellMethod/rent_AR_ap.html
+++ b/templates/sellMethod/rent_AR_ap.html
@@ -19,7 +19,7 @@
             </ul>
             <ul class="nav nav-tabs">
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'rent-AR-ap' %}">Apartamente</a>
+                    <a class="nav-link active" href="{% url 'rent-AR-ap' %}">Apartamente</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="{% url 'rent-AR-case' %}">Case/Vile</a>
