--- a/templates/sellMethod/sell_AR.html
+++ b/templates/sellMethod/sell_AR.html
@@ -17,6 +17,14 @@
                     <a class="nav-link" href="{% url 'rent-AR' %}">Inchirieri</a>
                 </li>
             </ul>
+            <ul class="nav nav-tabs">
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'sell-AR-ap' %}">Apartamente</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="{% url 'sell-AR-case' %}">Case/Vile</a>
+                </li>
+            </ul>
             {% if user.is_authenticated %}
                 {% for anunt in all_announce %}
                     <div class="col-md-3 ">
