--- a/templates/sellMethod/sell_AR_case.html
+++ b/templates/sellMethod/sell_AR_case.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %} Ansablu Rezidential - Inchirieri {% endblock %}
+{% block title %} Ansablu Rezidential {% endblock %}
 
 {% block content %}
     <div class="container-fluid">
@@ -11,18 +11,18 @@
                     <a class="nav-link" href="{% url 'ansamblu-rezidential' %}">Ansamblu Rezidential</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="{% url 'sell-AR' %}">Vanzari</a>
+                    <a class="nav-link active" aria-current="page" href="{% url 'sell-AR' %}">Vanzari</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="{% url 'rent-AR' %}">Inchirieri</a>
+                    <a class="nav-link" href="{% url 'rent-AR' %}">Inchirieri</a>
                 </li>
             </ul>
             <ul class="nav nav-tabs">
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'rent-AR-ap' %}">Apartamente</a>
+                    <a class="nav-link" href="{% url 'sell-AR-ap' %}">Apartamente</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="{% url 'rent-AR-case' %}">Case/Vile</a>
+                    <a class="nav-link active" aria-current="page" href="{% url 'sell-AR-case' %}">Case/Vile</a>
                 </li>
             </ul>
             {% if user.is_authenticated %}
