--- a/templates/sellMethod/rent_C0_case.html
+++ b/templates/sellMethod/rent_C0_case.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %} Comision 0 Inchirieri {% endblock %}
+{% block title %} Comision 0 Inchirieri Case/Vile {% endblock %}
 {% block content %}
     <div class="container-fluid mt-3 mb-3">
         <div class="row justify-content-center">
@@ -21,7 +21,7 @@
                         <a class="nav-link text-center" href="{% url 'rent-C0-ap' %}">Apartamente</a>
                     </li>
                     <li class="nav-item col">
-                        <a class="nav-link text-center" aria-current="page" href="{% url 'rent-C0-case' %}">Case/Vile</a>
+                        <a class="nav-link active text-center" aria-current="page" href="{% url 'rent-C0-case' %}">Case/Vile</a>
                     </li>
                     <li class="nav-item col">
                         <a class="nav-link text-center" aria-current="page" href="{% url 'rent-C0-terenuri' %}">Terenuri</a>
