--- a/templates/createPost/comision_0.html
+++ b/templates/createPost/comision_0.html
@@ -1,47 +1,60 @@
 {% extends 'base.html' %}
 {% load static %}
-
-{% block title %} Comision 0 - Inchirieri {% endblock %}
-
+{% block title %} Comision 0 {% endblock %}
 {% block content %}
-    <div class="container-fluid">
-        <div class="row">
-            <ul class="nav nav-tabs">
-                <li class="nav-item">
-                    <a class="nav-link active" href="{% url 'comision-0' %}">Comision 0</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="{% url 'sell-C0' %}">Vanzari</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'rent-C0' %}">Inchirieri</a>
-                </li>
-            </ul>
-            {% if user.is_authenticated %}
-                {% for anunt in all_announce %}
-                    <div class="col-md-3 ">
-                        <br><br>
-                        <div class="card" style="width: 18rem;">
-                            {% if anunt.poze %}
-                                <img src="{{ anunt.poze.url }}" class="card-img-top" alt="...">
-                            {% else %}
-                                <img src="{% static 'images/no_image_available.png' %}" class="card-img-top" alt="...">
-                            {% endif %}
-                            <div class="card-body">
-                                <h5 class="card-title">{{ anunt.titul_anunt }}</h5>
-                                <p class="card-text">Suprafata utila: {{ anunt.suprafata_utila }} mp</p>
-                                <p class="card-text">Pret: {{ anunt.pret }} euro</p>
-                                <p class="card-text">Localitatea: {{ anunt.localizare }}</p>
-                                <p class="card-text">Descriere: {{ anunt.descriere }}</p>
-                                <p class="card-text">Metoda Achizitie: {{ anunt.tip_vanzare }}</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+    <div class="container-fluid mt-3 mb-3">
+        <div class="row justify-content-center">
+            <div class="mx-auto">
+                <ul class="nav nav-tabs justify-content-center">
+                    <li class="nav-item col">
+                        <a class="nav-link active text-center" href="{% url 'comision-0' %}">Comision 0</a>
+                    </li>
+                    <li class="nav-item col">
+                        <a class="nav-link text-center" aria-current="page" href="{% url 'sell-C0' %}">Vanzari</a>
+                    </li>
+                    <li class="nav-item col">
+                        <a class="nav-link text-center" href="{% url 'rent-C0' %}">Inchirieri</a>
+                    </li>
+                </ul>
+                <ul class="nav nav-tabs justify-content-center">
+                    <li class="nav-item col">
+                        <a class="nav-link text-center" href="{% url 'C0-ap' %}">Apartamente</a>
+                    </li>
+                    <li class="nav-item col">
+                        <a class="nav-link text-center" aria-current="page" href="{% url 'C0-case' %}">Case/Vile</a>
+                    </li>
+                    <li class="nav-item col">
+                        <a class="nav-link text-center" aria-current="page" href="{% url 'C0-terenuri' %}">Terenuri</a>
+                    </li>
+                </ul>
+                {% if user.is_authenticated %}
+                    <div class="row">
+                        {% for anunt in all_announce %}
+                            <div class="col-md-3 ">
+                                <br><br>
+                                <div class="card" style="width: 18rem;">
+                                    {% if anunt.poze %}
+                                        <img src="{{ anunt.poze.url }}" class="card-img-top" alt="...">
+                                    {% else %}
+                                        <img src="{% static 'images/no_image_available.png' %}" class="card-img-top" alt="...">
+                                    {% endif %}
+                                    <div class="card-body">
+                                        <h5 class="card-title">{{ anunt.titul_anunt }}</h5>
+                                        <p class="card-text">Suprafata utila: {{ anunt.suprafata_utila }} mp</p>
+                                        <p class="card-text">Pret: {{ anunt.pret }} euro</p>
+                                        <p class="card-text">Localitatea: {{ anunt.localizare }}</p>
+                                        <p class="card-text">Descriere: {{ anunt.descriere }}</p>
+                                        <p class="card-text">Metoda Achizitie: {{ anunt.tip_vanzare }}</p>
+                                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
+                        {% endfor %}
                     </div>
-                {% endfor %}
-            {% else %}
-                <p><a href="{% url 'login' %}"> Intra in cont pentru a vedea anunturile </a></p>
-            {% endif %}
+                {% else %}
+                    <p><a href="{% url 'login' %}"> Intra in cont pentru a vedea anunturile </a></p>
+                {% endif %}
+            </div>
         </div>
     </div>
 {% endblock %}
