--- a/templates/sellMethod/C0_case.html
+++ b/templates/sellMethod/C0_case.html
@@ -1,30 +1,30 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %} Comision 0 Inchirieri {% endblock %}
+{% block title %} Comision 0 Terenuri {% endblock %}
 {% block content %}
     <div class="container-fluid mt-3 mb-3">
         <div class="row justify-content-center">
             <div class="mx-auto">
                 <ul class="nav nav-tabs justify-content-center">
                     <li class="nav-item col">
-                        <a class="nav-link text-center" href="{% url 'comision-0' %}">Comision 0</a>
+                        <a class="nav-link active text-center" href="{% url 'comision-0' %}">Comision 0</a>
                     </li>
                     <li class="nav-item col">
                         <a class="nav-link text-center" aria-current="page" href="{% url 'sell-C0' %}">Vanzari</a>
                     </li>
                     <li class="nav-item col">
-                        <a class="nav-link active text-center" href="{% url 'rent-C0' %}">Inchirieri</a>
+                        <a class="nav-link text-center" href="{% url 'rent-C0' %}">Inchirieri</a>
                     </li>
                 </ul>
                 <ul class="nav nav-tabs justify-content-center">
                     <li class="nav-item col">
-                        <a class="nav-link text-center" href="{% url 'rent-C0-ap' %}">Apartamente</a>
+                        <a class="nav-link text-center" href="{% url 'C0-ap' %}">Apartamente</a>
                     </li>
                     <li class="nav-item col">
-                        <a class="nav-link text-center" aria-current="page" href="{% url 'rent-C0-case' %}">Case/Vile</a>
+                        <a class="nav-link active text-center" aria-current="page" href="{% url 'C0-case' %}">Case/Vile</a>
                     </li>
                     <li class="nav-item col">
-                        <a class="nav-link text-center" aria-current="page" href="{% url 'rent-C0-terenuri' %}">Terenuri</a>
+                        <a class="nav-link text-center" aria-current="page" href="{% url 'C0-terenuri' %}">Terenuri</a>
                     </li>
                 </ul>
                 {% if user.is_authenticated %}
