--- a/templates/sellMethod/rent_C0_terenuri.html
+++ b/templates/sellMethod/rent_C0_terenuri.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %} Comision 0 Inchirieri {% endblock %}
+{% block title %} Comision 0 Inchirieri Terenuri {% endblock %}
 {% block content %}
     <div class="container-fluid mt-3 mb-3">
         <div class="row justify-content-center">
@@ -24,7 +24,7 @@
                         <a class="nav-link text-center" aria-current="page" href="{% url 'rent-C0-case' %}">Case/Vile</a>
                     </li>
                     <li class="nav-item col">
-                        <a class="nav-link text-center" aria-current="page" href="{% url 'rent-C0-terenuri' %}">Terenuri</a>
+                        <a class="nav-link active text-center" aria-current="page" href="{% url 'rent-C0-terenuri' %}">Terenuri</a>
                     </li>
                 </ul>
                 {% if user.is_authenticated %}
