--- a/templates/post.html
+++ b/templates/post.html
@@ -43,7 +43,7 @@
                                 <p class="card-text">Localitatea: {{ anunt.localizare }}</p>
                                 <p class="card-text">Descriere: {{ anunt.descriere }}</p>
                                 <p class="card-text">Metoda Achizitie: {{ anunt.tip_vanzare }}</p>
-                                <a href="{% url 'post' anunt.id %}" class="btn btn-primary">Detalii</a>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
                             </div>
                         </div>
                     </div>
