--- a/templates/sellMethod/AR_case.html
+++ b/templates/sellMethod/AR_case.html
@@ -42,7 +42,7 @@
                                         <p class="card-text">Localitatea: {{ anunt.localizare }}</p>
                                         <p class="card-text">Descriere: {{ anunt.descriere }}</p>
                                         <p class="card-text">Metoda Achizitie: {{ anunt.tip_vanzare }}</p>
-                                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                                        <a href="{% url 'post' anunt.id %}" class="btn btn-primary">Detalii</a>
                                     </div>
                                 </div>
                             </div>
