--- a/templates/sellMethod/sell_AI_case.html
+++ b/templates/sellMethod/sell_AI_case.html
@@ -52,7 +52,7 @@
                         {% endfor %}
                     </div>
                 {% else %}
-                    <p><a href="{% url 'login' %}"> Intra in cont pentru a vedea anunturile </a></p>
+                    <p class="text-center"><a href="{% url 'login' %}"> Intra in cont pentru a vedea anunturile </a></p>
                 {% endif %}
             </div>
         </div>
