--- a/static/css/my_style.css
+++ b/static/css/my_style.css
@@ -1,7 +1,24 @@
-.box1 {
-    display: inline-block;
+.container {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+.box1, .box2 {
+    flex: 1;
+    padding: 20px;
+    margin: 10px;
+    text-align: center;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
 }
 
-.box2 {
-    display: inline-block;
+.carousel-item img {
+    width: 100%;
+    height: auto;
+}
+.card-body {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
 }
