--- a/templates/Home/homepage.html
+++ b/templates/Home/homepage.html
@@ -50,4 +50,28 @@
                 {% endfor %}
             </div>
         </div>
+        <br>
+        <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-6 offset-md-3">
+                <br><br>
+                <div class="card">
+                    <div class="card-header">
+                        <h3 class="text-center"> Evalueaza proprietatea ta </h3>
+                    </div>
+                    <form method="post">
+                        {% csrf_token %}
+                        <div class="card-body">
+                            <h2 class="text-center">In curand</h2>
+                        </div>
+                    </form>
+                    <div class="card-footer text-center">
+                        <button class="btn btn-success" type="submit">Evalueaza</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+            <table class="table table-hover"></table>
+            <table class="table table-hover"></table>
+            <table class="table table-hover"></table>
 {% endblock %}
