--- a/templates/Home/homepage.html
+++ b/templates/Home/homepage.html
@@ -12,20 +12,47 @@
                     <div class="card-header">
                         <h3 class="text-center"> Cauta </h3>
                     </div>
-                    <form method="post">
+                    <form method="GET" action="{% url 'home' %}">
                         {% csrf_token %}
-                        <div class="card-body">
-                            {{ form.as_p }}
+                            <div class="card-body">
+                                {{ form.as_p }}
+                            </div>
+                        <div class="card-footer text-center">
+                            <button class="btn btn-success" type="submit">Search</button>
                         </div>
-                    <div class="card-footer text-center">
-                        <button class="btn btn-success" type="submit">Search</button>
-                    </div>
                     </form>
                 </div>
             </div>
         </div>
         <br>
-        <div class="row">
+        <div class="container-fluid">
+            <div class="row">
+                {% for anunt in property %}
+                    <div class="col-md-3 offset-md-1">
+                        <br>
+                        <div class="card" style="width: 18rem;">
+                            {% if anunt.poze %}
+                                <img src="{{ anunt.poze.url }}" class="card-img-top" alt="...">
+                            {% else %}
+                                <img src="{% static 'images/no_image_available.png' %}" class="card-img-top" alt="...">
+                            {% endif %}
+                            <div class="card-body">
+                                <h5 class="card-title">{{ anunt.titul_anunt }}</h5>
+                                <p class="card-text">Suprafata utila: {{ anunt.suprafata_utila }} mp</p>
+                                <p class="card-text">Pret: {{ anunt.pret }} euro</p>
+                                <p class="card-text">Localitatea: {{ anunt.localizare }}</p>
+                                <p class="card-text">Descriere: {{ anunt.descriere }}</p>
+                                <p class="card-text">Metoda Achizitie: {{ anunt.tip_vanzare }}</p>
+                                <a href="{% url 'post' anunt.id %}" class="btn btn-primary">Detalii</a>
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
+        <br>
+        <div class="container-fluid">
+            <div class="row">
                 {% for anunt in 4_tl%}
                     <div class="col-md-1 offset-md-2">
                         <br>
@@ -47,6 +74,7 @@
                         </div>
                     </div>
                 {% endfor %}
+            </div>
         </div>
         <br>
         <div class="container-fluid">
