--- a/templates/Home/homepage.html
+++ b/templates/Home/homepage.html
@@ -8,27 +8,19 @@
         <div class="row">
             <div class="col-md-6 offset-md-3">
                 <br><br>
-                <div class="card">
-                    <div class="card-header">
-                        <h3 class="text-center"> Cauta </h3>
-                    </div>
-                    <form method="GET" action="{% url 'home' %}">
+                    <form method="GET" action="{% url 'filter' %}">
                         {% csrf_token %}
-                            <div class="card-body">
-                                {{ form.as_p }}
+                            <div class="text-center">
+                                <button class="btn btn-success mx-auto" type="submit" ><h2>Cauta proprietatea perfecta pentru tine!</h2></button>
                             </div>
-                        <div class="card-footer text-center">
-                            <button class="btn btn-success" type="submit">Search</button>
-                        </div>
                     </form>
-                </div>
             </div>
         </div>
         <br>
         <div class="container-fluid">
             <div class="row">
                 {% for anunt in property %}
-                    <div class="col-md-3 offset-md-1">
+                    <div class="col-md-1 offset-md-2">
                         <br>
                         <div class="card" style="width: 18rem;">
                             {% if anunt.poze %}
