--- a/templates/post.html
+++ b/templates/post.html
@@ -38,6 +38,10 @@
                                 <td>Nr. carte funciara: {{ post.numar_carte_funciara }}</td>
                                 <td>Suprafata utila: {{ post.suprafata_utila }} mp</td>
                             </tr>
+                            <tr>
+                                <td>Numar camere: {{ post.numar_camere }}</td>
+                                <td>Numar bai: {{ post.numar_bai }}</td>
+                            </tr>
                         </table>
                     </div>
                 </div>
